General Bugs Fixes. Added components for readability

--- a/frontend/src/components/CRM/Panel/sidePanel.css
+++ b/frontend/src/components/CRM/Panel/sidePanel.css
@@ -15,7 +15,4 @@
     .crm-content{
         width: 83%;
     }
-    .uploader{
-        width: 220px;
-    }
 }
