--- a/frontend/src/components/LandingPage/landingFinal.css
+++ b/frontend/src/components/LandingPage/landingFinal.css
@@ -213,6 +213,12 @@ button.learn-more:active::before {
     box-shadow: 1px 1px 10px #444444;
 }
 
+.features-right-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .professor {
     margin-bottom: 2.5em;
 }
@@ -1247,20 +1253,13 @@ button:hover .button-text {
     #mobileWorking{
         display: initial;
     }
-/* 
-    .stepOne>.stepCard,
-    .stepTwo>.stepCard,
-    .stepThree>.stepCard {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-content: space-evenly;
-        align-items: space-evenly;
-        margin: 2em 0 0 0;
-    } */
 
     svg text {
         font-size: 3rem;
+    }
+
+    .features-right-card{
+        display: none;
     }
 }
 
